# red_frame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
examples/cet/RedFrame/: init.lua
examples/redscript/: BasicCaptureExample.reds
packaging/: PackageRelease.ps1
scripts/RedFrame/: Capture.reds
src/: AudioCaptureService.cpp  CaptureOutput.cpp  EngineViewportProbe.cpp  FrameDumpService.cpp  Harness.cpp  HarnessConfig.cpp  HarnessScriptApi.cpp  Internal.hpp  Main.cpp  PathUtils.cpp  Plugin.cpp  PluginState.cpp  PublicScriptBindings.cpp  ScreenshotOutputProbe.cpp  ScreenshotService.cpp  ScriptApi.cpp
